--- a/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine.nuspec
+++ b/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Mjolnir.CRM.ConsoleCommandLine</id>
+    <id>Mjolnir.ConsoleCommandLine</id>
     <version>$version$</version>
     <title>$title$</title>
     <authors>Osman GUMUS</authors>
