--- a/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine.UnitTests/Mjolnir.ConsoleCommandLine.UnitTests.csproj
+++ b/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine.UnitTests/Mjolnir.ConsoleCommandLine.UnitTests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{6032078C-BF3E-4346-86B9-4A2B6D94D758}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Mjolnir.CRM.ConsoleCommandLine.UnitTests</RootNamespace>
-    <AssemblyName>Mjolnir.CRM.ConsoleCommandLine.UnitTests</AssemblyName>
+    <RootNamespace>Mjolnir.ConsoleCommandLine.UnitTests</RootNamespace>
+    <AssemblyName>Mjolnir.ConsoleCommandLine.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ConsoleCommandLineTestBase.cs" />
     <Compile Include="ConsoleCommandLineTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
