--- a/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine/app.config
+++ b/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine/app.config
@@ -1,11 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+  <appSettings>
+    <add key="CommandsPath" value="Commands"/>
+    <add key="CommandAssemblies" value="Mjolnir.CRM.SolutionManagerMerged.dll"/>
+  </appSettings>
 </configuration>
