--- a/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine.NoNuget/App.config
+++ b/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine.NoNuget/App.config
@@ -5,6 +5,6 @@
     </startup>
   <appSettings>
     <add key="CommandsPath" value="Commands"/>
-    <add key="CommandAssemblies" value="Mjolnir.CRM.SolutionManagerMerged.dll;Mjolnir.ConsoleCommandLine.NoNuget.exe"/>
+    <add key="CommandAssemblies" value="Mjolnir.CRM.SolutionManagerMerged.dll;Mjolnir.ConsoleCommandLine.NoNuget.exe;Mjolnir.CRM.SolutionManager.dll"/>
   </appSettings>
 </configuration>
