--- a/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine.csproj
+++ b/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InputAttributes\BooleanInput.cs" />
     <Compile Include="CmdLine.cs" />
     <Compile Include="CommandAutoComplete.cs" />
     <Compile Include="CommandLineAttributeBase.cs" />
