--- a/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine.csproj
+++ b/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine/Mjolnir.ConsoleCommandLine.csproj
@@ -36,6 +36,9 @@
     <AssemblyOriginatorKeyFile>Mjolnir.ConsoleCommandLine.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommandLine, Version=2.0.275.0, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommandLineParser.2.1.1-beta\lib\net45\CommandLine.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Crm.Sdk.Proxy, Version=8.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CrmSdk.CoreAssemblies.8.2.0.2\lib\net452\Microsoft.Crm.Sdk.Proxy.dll</HintPath>
       <Private>True</Private>
@@ -59,21 +62,19 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InputAttributes\BooleanInput.cs" />
     <Compile Include="CmdLine.cs" />
     <Compile Include="CommandAutoComplete.cs" />
     <Compile Include="CommandLineAttributeBase.cs" />
     <Compile Include="Commands\ClearCommand.cs" />
     <Compile Include="Commands\ListCommandsCommand.cs" />
     <Compile Include="ConsoleCommandBase.cs" />
-    <Compile Include="ConsoleCommandAttribute.cs" />
     <Compile Include="ConsoleCommandLine.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Nothing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="InputAttributes\StringInput.cs" />
     <Compile Include="Tracer\ConsoleTracer.cs" />
     <Compile Include="Tracer\FileTracer.cs" />
+    <Compile Include="Utils\StringToArgs.cs" />
     <Compile Include="Utils\TableToConsole.cs" />
   </ItemGroup>
   <ItemGroup>
